[FIX] text align step indicators

--- a/addons/care_config_relaunch_v2/static/src/css/care_multipage.css
+++ b/addons/care_config_relaunch_v2/static/src/css/care_multipage.css
@@ -255,6 +255,7 @@ body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data
 #product_detail {
     display: flex;
     flex-flow: column;
+    text-align: center;
 }
 
 body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
